<?xml version="1.0" encoding="utf-8"?>

<!--
  ~     Copyright (C) 2022-present Techlore
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>

    <!--
    Ensure proper encoding of characters when translating to other languages.
    example: ä as \u00E4, é as \u00E9 etc.

    + = \u002B
    & = &amp;
    -->

    <!--First activity -->
    <string name="retrieving_data">Retrieving data</string>
    <string name="scan_installed">Scanning installed apps</string>
    <string name="welcome_text_desc">As a first-time user of the app, please take a moment to familiarize yourself with the icons and status indicators.</string>
    <string name="skip">Skip</string>

    <!--#########################################################################################-->

    <!--Main activity-->
    <string name="no_apps_found">No apps found</string>
    <string name="new_submission">New submission</string>

    <!--My ratings fragment-->
    <string name="no_ratings_available">No ratings available</string>
    <string name="submit_first_rating">Tap \u002B to submit your first rating</string>

    <!--Toolbar menu-->
    <string name="menu_back">Back</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_view">View</string>

    <!--Nav view-->
    <string name="device_info">Device info</string>
    <string name="tap_to_select_rom">Tap here to select the ROM on this device.</string>
    <string name="plexus_data">Plexus data</string>
    <string name="installed_apps">Installed apps</string>
    <string name="favorites">Favorites</string>
    <string name="my_account">My account</string>
    <string name="my_ratings">My ratings</string>
    <string name="delete_account">Delete account</string>
    <string name="settings">Settings</string>

    <!--#########################################################################################-->

    <!--App details activity-->
    <string name="share">Share</string>
    <string name="shortcut">Shortcut</string>
    <string name="app">App</string>
    <string name="package_name">Package</string>
    <string name="retrieving_ratings">Retrieving ratings</string>
    <string name="total_score">Total score</string>
    <string name="total_ratings">Total ratings</string>
    <string name="ratings">Ratings</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="rate">Rate</string>

    <!--Toolbar menu-->
    <string name="menu_help">Help</string>
    <string name="menu_links">Links</string>
    <string name="menu_more">More options</string>

    <!--#########################################################################################-->

    <!--Email verification fragment-->
    <string name="verify_to_get_started">Verify your email to get started</string>
    <string name="verify">Verify</string>
    <string name="terms_conditions_title">Terms &amp; conditions</string>
    <string name="terms_conditions_desc">Your email is required to submit apps to Plexus.
        \nThis email will be used for verification purposes only and will be removed from our systems after verifying.
        \n
        \nThis is done to:
        \n\u2022 prevent potential abuse of our API.
        \n\u2022 ensure accuracy of the data submitted.
        \n
        \nYou may delete your account from this device at any time.</string>
    <string name="by_proceeding_agree_desc">By proceeding, you agree to the fair usage of Plexus.
        If the above terms &amp; conditions are violated, all the ratings submitted by you will be deleted.</string>
    <string name="verification">Verification</string>

    <!--Code verification fragment-->
    <string name="enter_code_sent_to_email">Enter the verification code sent to\n%1$s</string>
    <string name="verification_code">Verification code</string>
    <string name="verifying_code">Please wait, verifying code …</string>
    <string name="incorrect_code">Incorrect verification code.</string>

    <!--#########################################################################################-->

    <!--Settings activity-->
    <string name="theme">Theme</string>
    <string name="material_you">Material You\n(requires app restart)</string>
    <string name="default_view">Default view</string>
    <string name="conf_before_submit">Confirm before submitting</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="report_issue">Report an issue</string>
    <string name="support_us">Support us</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="visit_techlore">Visit Techlore</string>
    <string name="third_party_licenses">Third party licenses</string>

    <!--#########################################################################################-->

    <!--Bottom sheets-->
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>

    <!--No Network/Internet-->
    <string name="error_occurred_title">An error occurred</string>
    <string name="no_network_title">No Network/Internet</string>
    <string name="no_network_desc">Connect to Wi-Fi or mobile data and retry.
        If already connected, make sure it has an internet connection.</string>

    <!--Help-->
    <string name="icons">Icons</string>
    <string name="not_tested_subtitle">Not available, app has not been tested</string>
    <string name="broken_title">Broken</string>
    <string name="broken_subtitle">Unusable, mostly apps that fail to open</string>
    <string name="bronze_title">Bronze</string>
    <string name="bronze_subtitle">Acceptable but with missing or broken functionality</string>
    <string name="silver_title">Silver</string>
    <string name="silver_subtitle">Almost everything works with minimal caveats</string>
    <string name="gold_title">Gold</string>
    <string name="gold_subtitle">Perfect or perfect-like experience</string>
    <string name="other">Other</string>
    <string name="android_version_desc">Android versions</string>
    <string name="installation_source_desc">Installation source of apps</string>
    <string name="apps_submit_proc">Apps submission procedure</string>
    <string name="faqs">Frequently asked questions</string>

    <!--Developer verification warning-->
    <string name="dev_verf_warn_desc">Google has announced that starting from 2026/2027, all apps on certified Android devices will require the developers to submit personal identity details directly to Google.
        \n
        \nSince the developers of this app do not agree to this requirement, this app may no longer work on certified Android devices <b>after that time</b>.</string>
    <string name="details">Details</string>
    <string name="solutions">Solutions</string>
    <string name="do_not_show_again">Don\'t show this again</string>

    <!--Sort-->
    <string name="alphabetical">Alphabetical</string>
    <string name="installed_from">Installed from</string>
    <string name="any">Any</string>
    <string name="status">Status</string>

    <!--Translate-->
    <string name="translate">Translate</string>
    <string name="translating">Translating …</string>
    <string name="translated_using_libretranslate">Translated using LibreTranslate:</string>
    <string name="error_translating">Error while translating</string>

    <!--Email verification-->
    <string name="sending_code">Please wait, sending code …</string>
    <string name="error_sending_code">Error while sending code</string>

    <!--Delete account-->
    <string name="delete_account_desc">If you delete your account:
        \n\u2022 you won\'t be able to submit ratings.
        \n\u2022 all previously submitted ratings will be permanently removed from this device.
        \n
        \nAre you sure you want to proceed?</string>

    <!--First submission-->
    <string name="first_submission_desc">All your future submissions will consider this selection, and it cannot be changed later.</string>
    <string name="select_correct_rom">Please select the correct ROM installed on this device.</string>
    <string name="select">Select</string>
    <string name="proceed">Proceed</string>

    <!--Rate-->
    <string name="issues_to_check_in_apps">Common issues to check in apps</string>
    <string name="notes">Notes</string>
    <string name="optional">optional</string>
    <string name="submit">Submit</string>

    <!--Submit-->
    <string name="about_to_submit">You are about to submit a rating. Are you sure you want to proceed?</string>
    <string name="wait_submitting_data">Please wait, submitting data …</string>
    <string name="submit_success">Submitted successfully</string>
    <string name="submit_error">Error while submitting data</string>
    <string name="thanks_for_submitting">Thank you for submitting data and helping the community.</string>

    <!--Theme-->
    <string name="follow_system">Follow system</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <!--#########################################################################################-->

    <!--Snackbars-->
    <string name="added_to_fav">Added %1$s to favorites</string>
    <string name="removed_from_fav">Removed %1$s from favorites</string>
    <string name="undo">Undo</string>
    <string name="install_app_to_submit">Install %1$s to submit rating</string>
    <string name="device_should_be_degoogled_or_microg">Device should either be de-Googled or have microG to submit rating</string>
    <string name="rating_already_submitted">Rating already submitted for %1$s %2$s</string>
    <string name="no_browsers">No browsers installed on this device</string>
    <string name="deleted_account_successfully">Account deleted successfully</string>

</resources>
