<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2022 Techlore
  ~
  ~  This file is part of Plexus.
  ~
  ~  Plexus is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Plexus is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Plexus.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group_labels">
        <item
            android:id="@+id/nav_plexus_data"
            android:icon="@drawable/ic_plexus_data"
            android:title="@string/plexus_data" />

        <item
            android:id="@+id/nav_installed_apps"
            android:icon="@drawable/ic_installed_apps"
            android:title="@string/installed_apps" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_fav_outline"
            android:title="@string/favorites" />

    </group>

    <item android:title="@string/contribute">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/group_contribute">

                <item
                    android:id="@+id/nav_report_issue"
                    android:icon="@drawable/ic_report_issue"
                    android:title="@string/report_issue"/>

            </group>
        </menu>
    </item>

    <item android:title="@string/menu_settings">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/group_settings">

                <item
                    android:id="@+id/nav_theme"
                    android:icon="@drawable/ic_theme"
                    android:title="@string/theme"/>

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about"/>

            </group>
        </menu>
    </item>

</menu>
