<?xml version="1.0" encoding="utf-8"?>

<!--
  ~     Copyright (C) 2022-present Techlore
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@drawable/shape_scrollbar_thumb"
    tools:context=".fragments.settings.SettingsFragment"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_25">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_gravity="center"
            android:background="@color/grey_800"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="center"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_2.5"
            android:paddingStart="@dimen/margin_8"
            android:paddingEnd="@dimen/margin_8"
            android:text="@string/plexus"
            android:textSize="@dimen/text_20"
            style="@style/MediumBoldText"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/aboutVersion"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_8"
            android:paddingEnd="@dimen/margin_8"
            android:text="@string/version"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="@dimen/text_17"
            style="@style/MediumBoldText"/>

        <include
            layout="@layout/divider_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:paddingHorizontal="@dimen/margin_25"
            android:paddingVertical="@dimen/margin_16"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/theme"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_16"
            android:drawableStart="@drawable/ic_theme"
            android:drawablePadding="@dimen/margin_16" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/materialYouSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_25"
            android:paddingVertical="@dimen/margin_8"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_material_you"
            android:drawablePadding="@dimen/margin_16"
            android:text="@string/material_you"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_16"
            android:checked="false"
            android:visibility="gone"
            tools:visibility="visible"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/defaultView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/margin_25"
            android:paddingVertical="@dimen/margin_16"
            android:drawableStart="@drawable/ic_default_view"
            android:drawablePadding="@dimen/margin_16"
            android:text="@string/default_view"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_16"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/confBeforeSubmitSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_25"
            android:paddingVertical="@dimen/margin_8"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_conf_before_submit"
            android:drawablePadding="@dimen/margin_16"
            android:text="@string/conf_before_submit"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_16"
            android:checked="false"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_20"
            android:text="@string/about"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_17"
            style="@style/MediumBoldText"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/privacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2.5"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/margin_25"
            android:paddingVertical="@dimen/margin_16"
            android:drawableStart="@drawable/ic_privacy_policy"
            android:drawablePadding="@dimen/margin_16"
            android:text="@string/privacy_policy"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_16"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reportIssue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/margin_25"
            android:paddingVertical="@dimen/margin_16"
            android:drawableStart="@drawable/ic_report_issue"
            android:drawablePadding="@dimen/margin_16"
            android:text="@string/report_issue"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_16"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/supportUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/margin_25"
            android:paddingVertical="@dimen/margin_16"
            android:drawableStart="@drawable/ic_support_us"
            android:drawablePadding="@dimen/margin_16"
            android:text="@string/support_us"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_16"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/viewOnGitHub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/margin_25"
            android:paddingVertical="@dimen/margin_16"
            android:drawableStart="@drawable/ic_view_on_github"
            android:drawablePadding="@dimen/margin_16"
            android:text="@string/view_on_github"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_16"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/visitTechlore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/margin_25"
            android:paddingVertical="@dimen/margin_16"
            android:drawableStart="@drawable/ic_website"
            android:drawablePadding="@dimen/margin_16"
            android:text="@string/visit_techlore"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_16"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/licenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/margin_25"
            android:paddingVertical="@dimen/margin_16"
            android:drawableStart="@drawable/ic_licenses"
            android:drawablePadding="@dimen/margin_16"
            android:text="@string/third_party_licenses"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_16"/>

    </LinearLayout>

</ScrollView>